--- a/src/App.css
+++ b/src/App.css
@@ -34,15 +34,14 @@
   background-color: #eee;
   padding-top: 10vh;
   padding-bottom: 10px;
+  min-height: 90vh;
 }
 
 .message-card {
   background: transparent;
-  /* border-radius: 2px; */
   min-height: 100px;
   margin: 1rem;
   padding: 1rem;
-  /* box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%); */
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 .data-card {
@@ -218,9 +217,7 @@
   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
 
   transition-duration: .25s;
-  /* background-image: -webkit-gradient(linear,left top,left bottom,from(#221854),to(#672c8e));
-    background-image: linear-gradient(#221854,#672c8e); */
-    color: white;
+  color: white;
 }
 
 .menu__item {
